--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chatbot Regione Lombardia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-italia@2.8.5/dist/css/bootstrap-italia.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="chat-container">
@@ -65,7 +65,7 @@
 
         <!-- Main content -->
         <main class="main-content">
-            <header class="chat-header">
+            <header class="chat-header bg-green-dark text-white">
                 <h1 class="chat-title">Chatbot Regione Lombardia</h1>
             </header>
             
