--- a/regionale.html
+++ b/regionale.html
@@ -6,7 +6,7 @@
     <title>Portale Regione</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-italia@2.8.5/dist/css/bootstrap-italia.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         /* Stili aggiuntivi per la pagina regionale */
         body {
@@ -14,8 +14,9 @@
             overflow-x: hidden;
         }
         .regionale-header {
-            background-color: white;
-            border-bottom: 2px solid var(--green-dark);
+            background-color: var(--green-dark);
+            color: white;
+            border-bottom: 2px solid var(--green-primary);
             padding: 20px 0;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
@@ -40,13 +41,13 @@
         .regionale-title {
             font-size: 28px;
             font-weight: 700;
-            color: var(--green-dark);
+            color: white;
             margin: 0;
         }
 
         .regionale-subtitle {
             font-size: 16px;
-            color: var(--green-accent);
+            color: var(--green-lighter);
             margin: 5px 0 0 0;
         }
 
@@ -76,7 +77,7 @@
             font-weight: 500;
             text-align: center;
             transition: background-color 0.3s;
-            border-right: 1px solid var(--green-accent);
+            border-right: 1px solid var(--green-primary);
         }
 
         .nav-regionale-item:last-child .nav-regionale-link {
@@ -84,15 +85,15 @@
         }
 
         .nav-regionale-link:hover {
-            background-color: var(--green-medium);
+            background-color: var(--green-primary);
         }
 
         .nav-regionale-link.active {
-            background-color: var(--green-medium);
+            background-color: var(--green-primary);
         }
 
         .main-content-regionale {
-            background-color: var(--green-pale);
+            background-color: var(--green-bg);
             min-height: calc(100vh - 200px);
             padding: 40px 20px;
         }
@@ -127,7 +128,7 @@
 
         .service-card {
             background-color: white;
-            border: 1px solid var(--green-accent);
+            border: 1px solid var(--green-primary);
             border-radius: 12px;
             padding: 20px;
             transition: transform 0.2s, box-shadow 0.2s;
@@ -135,12 +136,12 @@
 
         .service-card:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            box-shadow: 0 4px 12px rgba(0,107,42,0.15);
         }
 
         .service-icon {
             font-size: 32px;
-            color: var(--green-dark);
+            color: var(--green-primary);
             margin-bottom: 15px;
         }
 
@@ -164,7 +165,7 @@
             
             .nav-regionale-link {
                 border-right: none;
-                border-bottom: 1px solid var(--green-accent);
+                border-bottom: 1px solid var(--green-primary);
             }
             
             .nav-regionale-item:last-child .nav-regionale-link {
