--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chatbot Regione Lombardia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-italia@2.8.5/dist/css/bootstrap-italia.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="chat-container">
@@ -15,7 +15,7 @@
             <div class="sidebar-header">
                 <div class="user-info">
                     <div class="user-avatar">
-                        <img src="fl.svg" alt="Regione Lombardia" class="logo">
+                        <img src="assets/images/FL.svg" alt="Regione Lombardia" class="logo">
                     </div>
                     <div class="user-name">Regione Lombardia</div>
                 </div>
