--- a/index2.html
+++ b/index2.html
@@ -93,11 +93,18 @@
 
         <!-- Main content -->
         <main class="main-content">
+            <!-- Bot message box -->
+            <div class="bot-message-box">
+                <div class="message-content">
+                    <p>COME POSSO ESSERE UTILE?</p>
+                </div>
+            </div>
+            
             <div class="chat-messages">
                 <!-- Welcome section -->
                 <div class="welcome-section">
-                    <h2>Benvenuto!</h2>
-                    <p>Domande frequenti</p>
+                    <h2>COME POSSO ESSERE UTILE??</h2>
+                    <p></p>
                 </div>
 
                 <!-- Suggested questions -->
