--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         </a>
                     </div>
                     <div class="nav-row">
-                        <a href="#fluper-web" class="nav-regionale-link">
+                        <a href="fluper-web.html" class="nav-regionale-link">
                             <i class="fas fa-globe"></i> FLUPER WEB
                         </a>
                         <a href="#fluper-web-ammin" class="nav-regionale-link">
