--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            padding: 10px 15px;
+            padding: 8px 12px;
             color: white;
             text-decoration: none;
             font-weight: 500;
-            font-size: 12px;
+            font-size: 11px;
             transition: background-color 0.3s;
             border-radius: 6px;
             flex: 1;
-            min-width: 180px;
+            min-width: 160px;
             text-align: left;
             border: 1px solid rgba(255, 255, 255, 0.2);
             background-color: rgba(255, 255, 255, 0.05);
@@ -305,28 +305,15 @@
             <nav class="nav-regionale">
                 <div class="nav-wrapper">
                     <div class="nav-row">
-                        <a href="#mitraggio-caricamenti" class="nav-regionale-link">
+                        <a href="#monitoraggio-caricamenti" class="nav-regionale-link">
                             <i class="fas fa-upload"></i> MONITORAGGIO CARICAMENTI
                         </a>
                         <a href="#fluper-comunicazione-priv" class="nav-regionale-link">
-                            <i class="fas fa-building"></i> FLUPER-COMUNICAZIONE DI SERVIZIO AZ. PRIVATE
+                            <i class="fas fa-building"></i> FLUPER-COMUNICAZIONE AZ. PRIVATE
                         </a>
                         <a href="#fluper-comunicazione-pubb" class="nav-regionale-link">
-                            <i class="fas fa-university"></i> FLUPER-COMUNICAZIONE DI SERVIZIO AZ. PUBBLICHE
+                            <i class="fas fa-university"></i> FLUPER-COMUNICAZIONE AZ. PUBBLICHE
                         </a>
-                    </div>
-                    <div class="nav-row">
-                        <a href="fluper-web.html" class="nav-regionale-link">
-                            <i class="fas fa-globe"></i> FLUPER WEB
-                        </a>
-                        <a href="#fluper-web-ammin" class="nav-regionale-link">
-                            <i class="fas fa-cog"></i> FLUPER WEB AMMINISTRAZIONE
-                        </a>
-                        <a href="#fluper-web-altri" class="nav-regionale-link">
-                            <i class="fas fa-stream"></i> FLUPER WEB ALTRI FLUSSI
-                        </a>
-                    </div>
-                    <div class="nav-row">
                         <a href="#fluper-conto" class="nav-regionale-link">
                             <i class="fas fa-calculator"></i> FLUPER CONTO ANNUALE
                         </a>
@@ -338,9 +325,29 @@
                         </a>
                     </div>
                     <div class="nav-row">
+                        <a href="fluper-web.html" class="nav-regionale-link">
+                            <i class="fas fa-globe"></i> FLUPER WEB
+                        </a>
+                        <a href="#fluper-web-ammin" class="nav-regionale-link">
+                            <i class="fas fa-cog"></i> FLUPER WEB AMMIN
+                        </a>
+                        <a href="#fluper-web-altri" class="nav-regionale-link">
+                            <i class="fas fa-stream"></i> FLUPER WEB ALTRI
+                        </a>
+                        <a href="#fluper-web-dati" class="nav-regionale-link">
+                            <i class="fas fa-database"></i> FLUPER WEB DATI
+                        </a>
+                        <a href="#fluper-web-report" class="nav-regionale-link">
+                            <i class="fas fa-chart-line"></i> FLUPER WEB REPORT
+                        </a>
+                        <a href="#fluper-web-export" class="nav-regionale-link">
+                            <i class="fas fa-download"></i> FLUPER WEB EXPORT
+                        </a>
                         <a href="#fluper-report-economici" class="nav-regionale-link">
                             <i class="fas fa-euro-sign"></i> FLUPER-REPORT ECONOMICI
                         </a>
+                    </div>
+                    <div class="nav-row">
                         <a href="regionale.html" class="nav-regionale-link" onclick="navigateToChatbot(event)">
                             <i class="fas fa-robot"></i> CHATBOT
                         </a>
