--- a/fluper-web.html
+++ b/fluper-web.html
@@ -524,7 +524,9 @@
 
         .flows-table td {
             padding: 16px 20px;
-            border-bottom: 1px solid #e0e0e0;
+            border: 1px solid #e0e0e0;
+            border-left: none;
+            border-right: none;
             font-size: 14px;
             vertical-align: middle;
         }
