--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             gap: 4px;
             margin-bottom: 4px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            border-right: 1px solid rgba(255, 255, 255, 0.1);
             padding-bottom: 4px;
             min-width: max-content;
         }
@@ -686,7 +687,7 @@
     <header class="regionale-header" role="banner">
         <div class="regionale-container">
             <div class="logo-section">
-                <img src="assets/images/FL.svg" alt="Logo Regione Lombardia" class="logo">
+                <img src="FL.svg" alt="Logo Regione Lombardia" class="logo">
                 <div class="logo-text">
                     <h1>Regione Lombardia</h1>
                 </div>
