--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
     <header class="regionale-header" role="banner">
         <div class="regionale-container">
             <div class="logo-section">
-                <img src="FL.svg" alt="Logo Regione Lombardia" class="logo">
+                <img src="assets/images/FL.svg" alt="Logo Regione Lombardia" class="logo">
                 <div class="logo-text">
                     <h1>Regione Lombardia</h1>
                 </div>
