--- a/fluper-web.html
+++ b/fluper-web.html
@@ -737,7 +737,7 @@
                         <a href="#web-home" class="nav-regionale-link" tabindex="0">
                             <i class="fas fa-home" aria-hidden="true"></i> WEB HOME
                         </a>
-                        <a href="regionale.html" class="nav-regionale-link" tabindex="0">
+                        <a href="regionale-inline.html" class="nav-regionale-link" tabindex="0">
                             <i class="fas fa-robot" aria-hidden="true"></i> CHATBOT
                         </a>
                     </div>
